Bug 1542384 - reduce timeout of shutdown resolver threads and make it prefable r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D27013

--HG--
extra : moz-landing-system : lando